# CplusplusPractice

./: CMakeLists.txt  README.md  cov.csv  cplayground.i  mean.csv
cplayground/: CMakeLists.txt
cplayground/include/: child_class.h  child_class_template.h  functional_bind.h  functional_lambda_initializer.h  test_pybind.h  test_static_instantiate_class.h  virtual_overload.h
cplayground/src/: main.cpp  test_bind.cpp  test_changable_lambda.cpp  test_inheritance_template.cpp  test_loop_initializer.cpp  test_static_instantiate_class.cpp  virtual_overload.cpp
include/: base_class.h  child_class_extended.h  child_class_template.h  functional_bind.h  functional_lambda_initializer.h  lambda_class_function.h  struct_constructors.h  test_make_shared.h
python/: CMakeLists.txt  main.py
src/: main.cpp  test_bind.cpp  test_functional.cpp  test_lambda.cpp  test_loop_initializer.cpp  test_make_shared.cpp  test_struct.cpp
wrapper/: pybind_wrapper.tpl.example
